# Brand-Architect-AI-pro-main

./: .replit  pyproject.toml  replit.md
.agents/memory/: MEMORY.md  python-fastapi-backend.md
artifacts/api-server-py/: main.py  requirements.txt
artifacts/api-server-py/lib/: ai.py  auth.py  credits.py  db.py  image_storage.py  job_store.py  pagination.py  publisher.py  trends.py
artifacts/api-server-py/routers/: admin.py  agent.py  auth.py  brands.py  campaigns.py  dashboard.py  deps.py  designs.py  images.py  jobs.py  nodes.py  posts.py  replit_auth.py  social.py  user.py
artifacts/brand-os/src/: App.tsx
artifacts/brand-os/src/components/: Layout.tsx  UserSettingsPanel.tsx
artifacts/brand-os/src/contexts/: SiteSettingsContext.tsx  UserSettingsContext.tsx
artifacts/brand-os/src/lib/: i18n.ts  notifications.ts
artifacts/brand-os/src/pages/: Admin.tsx  AgentWorkspace.tsx  BrandKit.tsx  BrandWizard.tsx  CampaignBriefPage.tsx  CampaignList.tsx  Dashboard.tsx  Notifications.tsx  SignIn.tsx  SignUp.tsx
artifacts/brand-os/src/pages/admin/: MonitoringTab.tsx
lib/api-client-react/: tsconfig.tsbuildinfo
lib/api-zod/: tsconfig.tsbuildinfo
lib/db/: tsconfig.tsbuildinfo
lib/integrations/integrations-openai-ai-server/: tsconfig.tsbuildinfo
